...
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:id="@+id/fragmentGad">
    <!-- add this idd needed in test -->

...

                <RadioGroup
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton11"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton12"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton13"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton14"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton21"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton22"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton23"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton24"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton31"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton32"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton33"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton34"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton41"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton42"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton43"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton44"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton51"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton52"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton53"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton54"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton61"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton62"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton63"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton64"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

                <RadioGroup
                    android:id="@+id/radio7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <RadioButton
                        android:id="@+id/radioButton71"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton72"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton73"
                        android:layout_width="55dp"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/radioButton74"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
...

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
